test/spec/import-after-global.fail.txt
;;; ERROR: 1
;;; TOOL: run-interp-spec
;;; STDIN_FILE: third_party/testsuite/import-after-global.fail.wast
(;; STDERR ;;;
Error running "wast2wasm":
out/third_party/testsuite/import-after-global.fail.wast:1:36: imports must occur before all non-import definitions
(module (global i64 (i64.const 0)) (import "" "" (table 0 anyfunc)))
                                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

;;; STDERR ;;)
